tinyc/win32/include/math.h

double	sin (double);
double	cos (double);
double	tan (double);
double	sinh (double);
double	cosh (double);
double	tanh (double);
double	asin (double);
double	acos (double);
double	atan (double);
double	atan2 (double, double);
double	exp (double);
double	log (double);
double	log10 (double);
double	pow (double, double);
double	sqrt (double);
double	ceil (double);
double	floor (double);
double	frexp (double, int*);
double	fmod (double, double);
double hypot (double, double);
#define NAN (0.0F/0.0F)
/* round away from zero, regardless of fpu control word settings */
extern double round (double);
/* round towards zero, regardless of fpu control word settings */
extern double trunc (double);
/* one lonely transcendental */
extern double log2 (double _x);